--- a/src/main/resources/templates/eventInfo.html
+++ b/src/main/resources/templates/eventInfo.html
@@ -12,50 +12,50 @@
             border-collapse: collapse;
         }
     </style>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
+    <link th:rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css}" integrity="sha512-3JRrEUwaCkFUBLK1N8HehwQgu8e23jTH4np5NHOmQOobuC4ROQxFwFgBLTnhcnQRMs84muMh0PnnwXlPq5MGjg==" crossorigin="anonymous" />
+    <link th:rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js}" integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA==" crossorigin="anonymous" />
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
+    <link th:rel="stylesheet" th:href="@{/webjars/font-awesome/5.11.2/css/all.css} "/>
+    <link th:rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js}"/>
+    <link th:rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js}"/>
 </head>
 <body>
-    <table class="table table-bordered text-center">
-        <thead>
-        <tr class="bg-light-gray">
-            <th class="text-uppercase">
-                Event Name
-            </th>
-            <th class="text-uppercase">
-                Event Description
-            </th>
-            <th class="text-uppercase">
-                Event Start Time
-            </th>
-            <th class="text-uppercase">
-                Event End Time
-            </th>
-            <th class="text-uppercase">
-                Event initialization user
-            </th>
-        </tr>
-        </thead>
-        <tbody>
-            <td>
-                <div class="margin-10px-top font-size10" th:text="${eventName}"> Name </div>
-            </td>
-            <td>
-                <div class="margin-10px-top font-size10" th:text="${eventDescription}"> Description </div>
-            </td>
-            <td>
-                <div class="margin-10px-top font-size10" th:text="${startTime}"> Start Time </div>
-            </td>
-            <td>
-                <div class="margin-10px-top font-size10" th:text="${endTime}"> End Time </div>
-            </td>
-            <td>
-                <div class="margin-10px-top font-size10" th:text="${userName}"> User NAme </div>
-            </td>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col align-self-center">
+                    <div class="form-group">
+                        <label for="Name">Name:</label>
+                        <input type="text" id="name" th:placeholder="${eventName}" autocomplete="off" class="form-control" readonly/>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description:</label>
+                        <textarea type="text" rows="2" id="description" th:placeholder="${eventDescription}" class="form-control" autocomplete="off" readonly></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="startTime">Event Start Date and Time:</label>
+                            <input type="text" class="form-control datetimepicker-input" th:placeholder="${startTime}" id="startTime" readonly/>
+                    </div>
+                    <div class="form-group">
+                        <label for="endTime">Event End Date and Time:</label>
+                            <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2" th:placeholder="${endTime}" id="endTime" readonly/>
+                    </div>
 
-    <form>
-        <input type="button" value="Go back!" onclick="history.back()">
-    </form>
+                    <div class="form-group">
+                        <label for="eventCreator">Event Creator:</label>
+                        <input type="text" class="form-control datetimepicker-input" th:placeholder="${userName}" id="eventCreator" readonly/>
+                    </div>
+                    <button class="btn btn-primary" onclick="history.back()">Return</button>
+                    <span></span>
+            </div>
+        </div>
+    </div>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js}"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js}" integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA==" crossorigin="anonymous"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/css/tempusdominus-bootstrap-4.min.css}" integrity="sha512-3JRrEUwaCkFUBLK1N8HehwQgu8e23jTH4np5NHOmQOobuC4ROQxFwFgBLTnhcnQRMs84muMh0PnnwXlPq5MGjg==" crossorigin="anonymous"></script>
 </body>
 
 </html>
