--- a/src/main/resources/templates/timetable.html
+++ b/src/main/resources/templates/timetable.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8"/>
     <title>Spring Boot Thymeleaf Application - Bootstrap Table</title>
 
-    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.4.1-1/css/bootstrap.min.css} "/>
+<!--    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/4.4.1-1/css/bootstrap.min.css} "/>-->
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} "/>
 </head>
 <body>
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Thymeleaf - Bootstrap Timetable</a>
+        <a class="navbar-brand" href="/timetable">Thymeleaf - Bootstrap Timetable</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" th:text="${'Current user: ' + userName}"> Home
+                    <a class="nav-link" href="/timetable" th:text="${'Current user: ' + userName}"> Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -45,33 +46,56 @@
         <img src="img/content/timetable.png" alt="">
     </div>
     <div class="table-responsive">
-        <div> <input type="button" value="Add New Event" style="float: right;"> </div>
-        <div th:marginheight="30"> </div>
+        <form action="/timetable/newEvent" method="GET" class="navbar-form navbar-right" role="form">
+            <button class="btn btn-primary">Create new event</button>
+        </form>
+        <div class="timetable-img text-center"></div>
+        <nav aria-label="Year navigation" class="paging" >
+            <ul class="pagination justify-content-end" th:if="${eventsPerHoursWeekPaged.page.totalPages > 1}">
+                <li class="page-item" th:classappend="${!eventsPerHoursWeekPaged.paging.isPrevEnabled()? 'disabled' : ''}">
+                    <a class="page-link" th:href="@{'/timetable?pageNumber=' + ${eventsPerHoursWeekPaged.paging.pageNumber - 1}}"
+                       tabindex="-1">Previous</a>
+                </li>
+                <th:block th:each="item : ${eventsPerHoursWeekPaged.paging.getItems()}">
+                    <li class="page-item" th:classappend="${item.index == eventsPerHoursWeekPaged.paging.pageNumber? 'active' : ''}"
+                        th:if="${item.pageItemType.name() == 'PAGE'}">
+                        <a class="page-link" th:href="@{'/timetable?pageNumber=' + ${item.index}}"
+                           th:text="${item.index}"></a>
+                    </li>
+                    <li class="page-item disabled" th:if="${item.pageItemType.name() == 'DOTS'}">
+                        <a class="page-link" href="#">...</a>
+                    </li>
+                </th:block>
+                <li class="page-item" th:classappend="${!eventsPerHoursWeekPaged.paging.isNextEnabled()? 'disabled' : ''}">
+                    <a class="page-link" th:href="@{'/timetable?pageNumber=' + ${eventsPerHoursWeekPaged.paging.pageNumber + 1}}">Next</a>
+                </li>
+            </ul>
+        </nav>
         <table class="table table-bordered text-center">
             <thead>
             <tr class="bg-light-gray">
-                <th class="text-uppercase">Time</th>
-                <th class="text-uppercase">
+                <th class="text-uppercase" style="width: 8%" >Time</th>
+                <th class="text-uppercase" style="width: 15.33%">
                     Monday
                     <div class="margin-10px-top font-size10" th:text="${weekDates.get(0)}"> Date </div>
                 </th>
-                <th class="text-uppercase">
+                <th class="text-uppercase" style="width: 15.33%">
                     Tuesday
                     <div class="margin-10px-top font-size10" th:text="${weekDates.get(1)}"> Date </div>
                 </th>
-                <th class="text-uppercase">
+                <th class="text-uppercase" style="width: 15.33%">
                     Wednesday
                     <div class="margin-10px-top font-size10" th:text="${weekDates.get(2)}"> Date </div>
                 </th>
-                <th class="text-uppercase">
+                <th class="text-uppercase" style="width: 15.33%">
                     Thursday
                     <div class="margin-10px-top font-size10" th:text="${weekDates.get(3)}"> Date </div>
                 </th>
-                <th class="text-uppercase">
+                <th class="text-uppercase" style="width: 15.33%">
                     Friday
                     <div class="margin-10px-top font-size10" th:text="${weekDates.get(4)}"> Date </div>
                 </th>
-                <th class="text-uppercase">
+                <th class="text-uppercase" style="width: 15.33%">
                     Saturday
                     <div class="margin-10px-top font-size10" th:text="${weekDates.get(5)}"> Date </div>
                 </th>
@@ -79,6 +103,7 @@
             </thead>
             <tbody>
                 <tr th:each="hour : ${eventsPerHoursWeek.keySet()}">
+
                     <!--                    TIME COLUMN-->
                     <td class="align-middle" th:text="${hour}">TIME</td>
                     <td>
@@ -87,7 +112,7 @@
                                 <div STYLE="font-size:18px" th:text="${eventsPerHoursWeek.get(hour)[0].name}">Event Name</div>
                                 <div STYLE="font-size:14px" th:text="${eventsPerHoursWeek.get(hour)[0].getStartAndEndTime}">Event Time</div>
                                 <div>
-                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[0].getId()})}"> Show info </a>
+                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[0].getId()})}" > Show info </a>
                                 </div>
                             </th:block>
                             <th:block th:if="${eventsPerHoursWeek.get(hour)[0].name ne null and eventsPerHoursWeek.get(hour)[1].name ne null}">
@@ -97,7 +122,7 @@
                                 <div STYLE="font-size:18px" th:text="${eventsPerHoursWeek.get(hour)[1].name}">Event Name</div>
                                 <div STYLE="font-size:14px" th:text="${eventsPerHoursWeek.get(hour)[1].getStartAndEndTime}">Event Time</div>
                                 <div>
-                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[1].getId()})}"> Show info </a>
+                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[1].getId()})}" > Show info </a>
                                 </div>
                             </th:block>
                         </th:block>
@@ -111,7 +136,7 @@
                                 <div STYLE="font-size:18px" th:text="${eventsPerHoursWeek.get(hour)[2].name}">Event Name</div>
                                 <div STYLE="font-size:14px" th:text="${eventsPerHoursWeek.get(hour)[2].getStartAndEndTime}">Event Time</div>
                                 <div>
-                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[2].getId()})}"> Show info </a>
+                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[2].getId()})}" > Show info </a>
                                 </div>
                             </th:block>
                             <th:block th:if="${eventsPerHoursWeek.get(hour)[2].name ne null and eventsPerHoursWeek.get(hour)[3].name ne null}">
@@ -121,7 +146,7 @@
                                 <div STYLE="font-size:18px" th:text="${eventsPerHoursWeek.get(hour)[3].name}">Event Name</div>
                                 <div STYLE="font-size:14px" th:text="${eventsPerHoursWeek.get(hour)[3].getStartAndEndTime}">Event Time</div>
                                 <div>
-                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[3].getId()})}"> Show info </a>
+                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[3].getId()})}" > Show info </a>
                                 </div>
                             </th:block>
                         </th:block>
@@ -135,7 +160,7 @@
                                 <div STYLE="font-size:18px" th:text="${eventsPerHoursWeek.get(hour)[4].name}">Event Name</div>
                                 <div STYLE="font-size:14px" th:text="${eventsPerHoursWeek.get(hour)[4].getStartAndEndTime}">Event Time</div>
                                 <div>
-                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[4].getId()})}"> Show info </a>
+                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[4].getId()})}" > Show info </a>
                                 </div>
                             </th:block>
                             <th:block th:if="${eventsPerHoursWeek.get(hour)[4].name ne null and eventsPerHoursWeek.get(hour)[5].name ne null}">
@@ -145,7 +170,7 @@
                                 <div STYLE="font-size:18px" th:text="${eventsPerHoursWeek.get(hour)[5].name}">Event Name</div>
                                 <div STYLE="font-size:14px" th:text="${eventsPerHoursWeek.get(hour)[5].getStartAndEndTime}">Event Time</div>
                                 <div>
-                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[5].getId()})}"> Show info </a>
+                                    <a th:href="@{/timetable/events/{id} (id=${eventsPerHoursWeek.get(hour)[5].getId()})}" > Show info </a>
                                 </div>
                             </th:block>
                         </th:block>
@@ -228,38 +253,72 @@
                 </tr>
             </tbody>
         </table>
-        <nav aria-label="Year navigation" class="paging">
-            <ul class="pagination" th:if="${eventsPerHoursWeekPaged.page.totalPages > 1}">
-                <li class="page-item" th:classappend="${!eventsPerHoursWeekPaged.paging.isPrevEnabled()? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{'/timetable?pageNumber=' + ${eventsPerHoursWeekPaged.paging.pageNumber - 1}}"
-                       tabindex="-1">Previous</a>
-                </li>
-                <th:block th:each="item : ${eventsPerHoursWeekPaged.paging.getItems()}">
-                    <li class="page-item" th:classappend="${item.index == eventsPerHoursWeekPaged.paging.pageNumber? 'active' : ''}"
-                        th:if="${item.pageItemType.name() == 'PAGE'}">
-                        <a class="page-link" th:href="@{'/timetable?pageNumber=' + ${item.index}}"
-                           th:text="${item.index}"></a>
-                    </li>
-                    <li class="page-item disabled" th:if="${item.pageItemType.name() == 'DOTS'}">
-                        <a class="page-link" href="#">...</a>
-                    </li>
-                </th:block>
-                <li class="page-item" th:classappend="${!eventsPerHoursWeekPaged.paging.isNextEnabled()? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{'/timetable?pageNumber=' + ${eventsPerHoursWeekPaged.paging.pageNumber + 1}}">Next</a>
-                </li>
-            </ul>
-        </nav>
+
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="eventInfoModal" tabindex="-1" role="dialog" aria-labelledby="eventInfoModalLabel" aria-hidden="true" th:fragment="event">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="eventInfoModalLabel">Event info</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col align-self-center">
+                            <form method="get">
+                                <div class="form-group">
+                                    <label for="Name">Name:</label>
+                                    <input type="text" id="name" placeholder="Name" autocomplete="off" class="form-control"
+                                            required/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="description">Description:</label>
+                                    <textarea type="text" rows="2" id="description" placeholder="Description" class="form-control"
+                                              autocomplete="off" required></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <label for="startTime">Event Start Date and Time:</label>
+                                    <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"
+                                               id="startTime" placeholder="Input event start time" required/>
+                                        <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                                            <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="endTime">Event End Date and Time:</label>
+                                    <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+                                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2"
+                                               id="endTime" placeholder="Input event end time" required/>
+                                        <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+                                            <div class="input-group-text"><i class="fa fa-calendar-alt"></i></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--                                                    <button class="btn btn-primary" type="submit">Create event</button>-->
+                                <span></span>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--            <div class="modal-footer">-->
+            <!--                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+            <!--                <button type="button" class="btn btn-primary">Save changes</button>-->
+            <!--            </div>-->
+        </div>
     </div>
 </div>
 
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
-<script>
-
-
-</script>
 
 </body>
 </html>
