--- a/src/main/resources/templates/eventInfo.html
+++ b/src/main/resources/templates/eventInfo.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col align-self-center">
-                    <div class="form-group">
+                    <div class="form-group mt-5">
                         <label for="Name">Name:</label>
                         <input type="text" id="name" th:placeholder="${eventName}" autocomplete="off" class="form-control" readonly/>
                     </div>
